@@ -16,8 +16,8 @@ void TmpFileOpen(TmpFile*, char*, int);
 void TmpFileClose(TmpFile*);
 void TmpFileInitialize(TmpFile*);
 
-void PrintEntriesToBedAndWig(AlignEntries*, int, int64_t, int64_t, FILE*, FILE*);
+void PrintEntriesToBedAndWig(AlignEntries*, RGBinary*, int, int64_t, int64_t, FILE*, FILE*);
 int SplitIntoTmpFilesByContig(char*, TmpFile**, char*, int, int);
-void SplitEntriesAndPrint(FILE*, FILE*, TmpFile*, char*, int);
+void SplitEntriesAndPrint(RGBinary*, FILE*, FILE*, TmpFile*, char*, int);
 
 #endif
