@@ -12,6 +12,8 @@ genome files and index files have their version numbers embedded.
 * Moved from using mktemp to mkstemp, which means no more mktemp
 warnings.
 * Added a new utility, bsort, which sorts a bfast reported file.
+* Fixed off by two error for reverse strand in color space for 
+bmatches.
 
 Version 0.2.3
 * Updated bfix to include packed.
